--- a/RADproject2018/RADproject2018.csproj
+++ b/RADproject2018/RADproject2018.csproj
@@ -174,6 +174,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\ApplicationUserMigrations\201803122129511_Initial migration.cs" />
+    <Compile Include="Migrations\ApplicationUserMigrations\201803122129511_Initial migration.Designer.cs">
+      <DependentUpon>201803122129511_Initial migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\ApplicationUserMigrations\Configuration.cs" />
+    <Compile Include="Migrations\Students\201803122128572_Initial migration.cs" />
+    <Compile Include="Migrations\Students\201803122128572_Initial migration.Designer.cs">
+      <DependentUpon>201803122128572_Initial migration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Students\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Assessement.cs" />
@@ -259,6 +268,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\ApplicationUserMigrations\201803122129511_Initial migration.resx">
+      <DependentUpon>201803122129511_Initial migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\Students\201803122128572_Initial migration.resx">
+      <DependentUpon>201803122128572_Initial migration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
