--- a/RADproject2018/packages.config
+++ b/RADproject2018/packages.config
@@ -29,5 +29,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net46" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
