--- a/Server API/Server API.csproj
+++ b/Server API/Server API.csproj
@@ -44,6 +44,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -121,12 +129,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -211,16 +213,20 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\ApplicationMigrations\201803142141114_Initial.cs" />
-    <Compile Include="Migrations\ApplicationMigrations\201803142141114_Initial.Designer.cs">
-      <DependentUpon>201803142141114_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\ApplicationUserMigrations\201803161313288_Initial Application Migration.cs" />
+    <Compile Include="Migrations\ApplicationUserMigrations\201803161313288_Initial Application Migration.Designer.cs">
+      <DependentUpon>201803161313288_Initial Application Migration.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\ApplicationMigrations\Configuration.cs" />
-    <Compile Include="Migrations\AttendanceMigrations\201803142140069_Initial.cs" />
-    <Compile Include="Migrations\AttendanceMigrations\201803142140069_Initial.Designer.cs">
-      <DependentUpon>201803142140069_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\ApplicationUserMigrations\Configuration.cs" />
+    <Compile Include="Migrations\AttendanceMigration\201803161312139_Initial Attendance Migration.cs" />
+    <Compile Include="Migrations\AttendanceMigration\201803161312139_Initial Attendance Migration.Designer.cs">
+      <DependentUpon>201803161312139_Initial Attendance Migration.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\AttendanceMigrations\Configuration.cs" />
+    <Compile Include="Migrations\AttendanceMigration\201803161325171_table added.cs" />
+    <Compile Include="Migrations\AttendanceMigration\201803161325171_table added.Designer.cs">
+      <DependentUpon>201803161325171_table added.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\AttendanceMigration\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Assessement.cs" />
@@ -231,9 +237,9 @@
     <Compile Include="Models\Enrollment.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Instructor.cs" />
-    <Compile Include="Models\Score.cs" />
-    <Compile Include="Models\Section.cs" />
+    <Compile Include="Models\DeliveryOfCourse.cs" />
     <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\StudentAttendance.cs" />
     <Compile Include="Models\StudentDBContext.cs" />
     <Compile Include="Models\TimeTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -248,6 +254,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Models\MigrationCommands.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -314,11 +321,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\ApplicationMigrations\201803142141114_Initial.resx">
-      <DependentUpon>201803142141114_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\ApplicationUserMigrations\201803161313288_Initial Application Migration.resx">
+      <DependentUpon>201803161313288_Initial Application Migration.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\AttendanceMigrations\201803142140069_Initial.resx">
-      <DependentUpon>201803142140069_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\AttendanceMigration\201803161312139_Initial Attendance Migration.resx">
+      <DependentUpon>201803161312139_Initial Attendance Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\AttendanceMigration\201803161325171_table added.resx">
+      <DependentUpon>201803161325171_table added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
