--- a/Server API/Web.config
+++ b/Server API/Web.config
@@ -8,9 +8,9 @@
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <!--<connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-Server API-20180314083742.mdf&quot;;Initial Catalog=&quot;aspnet-Server API-20180314083742&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\DefaultConnection.mdf&quot;;Initial Catalog=&quot;aspnet-Server API-20180314083742&quot;;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
