--- a/CommonObjects/packages.config
+++ b/CommonObjects/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net46" />
-  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net46" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net46" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" />
 </packages>
