--- a/Server API/packages.config
+++ b/Server API/packages.config
@@ -39,5 +39,7 @@
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="popper.js" version="1.12.9" targetFramework="net46" />
   <package id="Respond" version="1.4.2" targetFramework="net46" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net46" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
